--- a/pdp/performance_tests/playbooks/playbook.yml
+++ b/pdp/performance_tests/playbooks/playbook.yml
@@ -4,6 +4,6 @@
   become: true
   become_method: sudo
   roles:
-    - role: setup
+    - role: performance_tests
   environment:
     PG_TEST_PORT_DIR: /tmp/postgres
