--- a/pdp/performance_tests/tasks/debian_tasks.yml
+++ b/pdp/performance_tests/tasks/debian_tasks.yml
@@ -235,7 +235,7 @@
       LANG: C.UTF-8
       LC_CTYPE: C
       LC_ALL: C
-    when: RUN_HEAP
+    when: run_heap
     register: results
 
   - debug: var=results.stdout_lines
