--- a/pdp/performance_tests/molecule/debian-11-arm/molecule.yml
+++ b/pdp/performance_tests/molecule/debian-11-arm/molecule.yml
@@ -4,7 +4,7 @@ dependency:
 driver:
   name: ec2
 platforms:
-  - name: pdp-debian11-arm-${BUILD_NUMBER}
+  - name: ppt-debian11-arm-${BUILD_NUMBER}
     region: eu-central-1
     image: ami-079862e16fe3822d0
     vpc_subnet_id: subnet-085deaca8c1c59a4f
