--- a/pdp/performance_tests/molecule/debian-12-arm/molecule.yml
+++ b/pdp/performance_tests/molecule/debian-12-arm/molecule.yml
@@ -4,7 +4,7 @@ dependency:
 driver:
   name: ec2
 platforms:
-  - name: pdp-debian12-arm-${BUILD_NUMBER}
+  - name: ppt-debian12-arm-${BUILD_NUMBER}
     region: eu-central-1
     image: ami-0056a7c4c0c442db6
     vpc_subnet_id: subnet-085deaca8c1c59a4f
