--- a/pdp/performance_tests/molecule/ol-8-arm/molecule.yml
+++ b/pdp/performance_tests/molecule/ol-8-arm/molecule.yml
@@ -4,7 +4,7 @@ dependency:
 driver:
   name: ec2
 platforms:
-  - name: pdp-ol8-arm-${BUILD_NUMBER}
+  - name: ppt-ol8-arm-${BUILD_NUMBER}
     region: eu-central-1
     image: ami-02d0bbe49c30e7652
     vpc_subnet_id: subnet-085deaca8c1c59a4f
