--- a/pdp/performance_tests/molecule/ubuntu-focal/molecule.yml
+++ b/pdp/performance_tests/molecule/ubuntu-focal/molecule.yml
@@ -4,7 +4,7 @@ dependency:
 driver:
   name: ec2
 platforms:
-  - name: pdp-ufocal-${BUILD_NUMBER}
+  - name: ppt-ufocal-${BUILD_NUMBER}
     region: eu-central-1
     image: ami-0fd8f89f28610e525
     vpc_subnet_id: subnet-085deaca8c1c59a4f
