--- a/pdp/performance_tests/molecule/ubuntu-jammy-arm/molecule.yml
+++ b/pdp/performance_tests/molecule/ubuntu-jammy-arm/molecule.yml
@@ -4,7 +4,7 @@ dependency:
 driver:
   name: ec2
 platforms:
-  - name: pdp-ujammy-arm-${BUILD_NUMBER}
+  - name: ppt-ujammy-arm-${BUILD_NUMBER}
     region: eu-central-1
     image: ami-0a50d18f624ae0302
     vpc_subnet_id: subnet-085deaca8c1c59a4f
