--- a/pdp/performance_tests/molecule/debian-12/molecule.yml
+++ b/pdp/performance_tests/molecule/debian-12/molecule.yml
@@ -4,7 +4,7 @@ dependency:
 driver:
   name: ec2
 platforms:
-  - name: pdp-debian12-${BUILD_NUMBER}
+  - name: ppt-debian12-${BUILD_NUMBER}
     region: eu-central-1
     image: ami-0584590e5f0e97daa
     vpc_subnet_id: subnet-085deaca8c1c59a4f
