--- a/pdp/performance_tests/molecule/ol-8/molecule.yml
+++ b/pdp/performance_tests/molecule/ol-8/molecule.yml
@@ -4,7 +4,7 @@ dependency:
 driver:
   name: ec2
 platforms:
-  - name: pdp-ol8-${BUILD_NUMBER}
+  - name: ppt-ol8-${BUILD_NUMBER}
     region: eu-central-1
     image: ami-0f18276190490b6e3
     vpc_subnet_id: subnet-085deaca8c1c59a4f
