--- a/pdp/performance_tests/molecule/ubuntu-jammy/molecule.yml
+++ b/pdp/performance_tests/molecule/ubuntu-jammy/molecule.yml
@@ -4,7 +4,7 @@ dependency:
 driver:
   name: ec2
 platforms:
-  - name: pdp-ujammy-${BUILD_NUMBER}
+  - name: ppt-ujammy-${BUILD_NUMBER}
     region: eu-central-1
     image: ami-06e89bbb5f88b3a34
     vpc_subnet_id: subnet-085deaca8c1c59a4f
