--- a/pdp/performance_tests/molecule/ubuntu-noble-arm/molecule.yml
+++ b/pdp/performance_tests/molecule/ubuntu-noble-arm/molecule.yml
@@ -4,7 +4,7 @@ dependency:
 driver:
   name: ec2
 platforms:
-  - name: pdp-unoble-arm-${BUILD_NUMBER}
+  - name: ppt-unoble-arm-${BUILD_NUMBER}
     region: eu-central-1
     image: ami-008edee5e5698d629
     vpc_subnet_id: subnet-085deaca8c1c59a4f
