--- a/pdp/performance_tests/molecule/ubuntu-noble/molecule.yml
+++ b/pdp/performance_tests/molecule/ubuntu-noble/molecule.yml
@@ -4,7 +4,7 @@ dependency:
 driver:
   name: ec2
 platforms:
-  - name: pdp-unoble-${BUILD_NUMBER}
+  - name: ppt-unoble-${BUILD_NUMBER}
     region: eu-central-1
     image: ami-0f67ca03a667867bb
     vpc_subnet_id: subnet-085deaca8c1c59a4f
