--- a/pdp/performance_tests/tasks/debian_tasks.yml
+++ b/pdp/performance_tests/tasks/debian_tasks.yml
@@ -217,6 +217,12 @@
 
   - name: Run performance tests for HEAP access method
     shell: | 
+      echo "Testing access method: $METHOD" | tee -a tee -a /tmp/access_method_benchmark_report.txt
+      echo "---------------------------------" | tee -a tee -a /tmp/access_method_benchmark_report.txt
+      echo "Command: pgbench -i -s $scale -d performance_db -U postgres" | tee -a tee -a /tmp/access_method_benchmark_report.txt
+      echo "Command: pgbench -c $clients -j $threads -T $duration -M prepared -d performance_db -U postgres" | tee -a tee -a /tmp/access_method_benchmark_report.txt
+      echo "---------------------------------" | tee -a tee -a /tmp/access_method_benchmark_report.txt
+
       psql -c "DROP DATABASE IF EXISTS performance_db;" -U postgres
       psql -c "CREATE DATABASE performance_db;" -U postgres
       psql -d performance_db -c "ALTER SYSTEM  SET default_table_access_method='heap';"
@@ -224,7 +230,11 @@
       # Initialize pgbench with the current access method
       pgbench -i -s $scale -d performance_db -U postgres
       # Run the benchmark
-      pgbench -c $clients -j $threads -T $duration -M prepared -d performance_db -U postgres
+      pgbench -c $clients -j $threads -T $duration -M prepared -d performance_db -U postgres | tee -a /tmp/access_method_benchmark_report.txt
+      echo "" >> tee -a /tmp/access_method_benchmark_report.txt
+      echo "---------------------------------" >> tee -a /tmp/access_method_benchmark_report.txt
+      echo "" >> tee -a /tmp/access_method_benchmark_report.txt
+      sync
       sudo sh -c 'echo 3 > /proc/sys/vm/drop_caches'
     become_user: postgres
     args:
@@ -245,3 +255,17 @@
     register: results
 
   - debug: var=results.stdout_lines
+
+  - stat:
+      path: /tmp/access_method_benchmark_report.txt
+    register: output
+
+  - name: Display Benchmark Results
+    command: cat /tmp/access_method_benchmark_report.txt
+    register: command_output
+    when: output.stat.exists
+
+  - name: Print to console
+    debug:
+      msg: "{{command_output.stdout_lines}}"
+    when: output.stat.exists
