--- a/pdp/performance_tests/tasks/debian_tasks.yml
+++ b/pdp/performance_tests/tasks/debian_tasks.yml
@@ -217,11 +217,11 @@
 
   - name: Run performance tests for HEAP access method
     shell: | 
-      echo "Testing access method: $METHOD" | tee -a tee -a /tmp/access_method_benchmark_report.txt
-      echo "---------------------------------" | tee -a tee -a /tmp/access_method_benchmark_report.txt
-      echo "Command: pgbench -i -s $scale -d performance_db -U postgres" | tee -a tee -a /tmp/access_method_benchmark_report.txt
-      echo "Command: pgbench -c $clients -j $threads -T $duration -M prepared -d performance_db -U postgres" | tee -a tee -a /tmp/access_method_benchmark_report.txt
-      echo "---------------------------------" | tee -a tee -a /tmp/access_method_benchmark_report.txt
+      echo "Testing access method: $METHOD" | tee -a /tmp/access_method_benchmark_report.txt
+      echo "---------------------------------" | tee -a /tmp/access_method_benchmark_report.txt
+      echo "Command: pgbench -i -s $scale -d performance_db -U postgres" | tee -a /tmp/access_method_benchmark_report.txt
+      echo "Command: pgbench -c $clients -j $threads -T $duration -M prepared -d performance_db -U postgres" | tee -a /tmp/access_method_benchmark_report.txt
+      echo "---------------------------------" | tee -a /tmp/access_method_benchmark_report.txt
 
       psql -c "DROP DATABASE IF EXISTS performance_db;" -U postgres
       psql -c "CREATE DATABASE performance_db;" -U postgres
