--- a/pdp/performance_tests/tasks/debian_tasks.yml
+++ b/pdp/performance_tests/tasks/debian_tasks.yml
@@ -217,17 +217,17 @@
 
   - name: Run performance tests for HEAP access method
     shell: | 
-      echo "Testing access method: $METHOD" | tee -a /tmp/access_method_benchmark_report.txt
+      echo "Testing access method: heap" | tee -a /tmp/access_method_benchmark_report.txt
       echo "---------------------------------" | tee -a /tmp/access_method_benchmark_report.txt
-      echo "Command: pgbench -i -s $scale -d performance_db -U postgres" | tee -a /tmp/access_method_benchmark_report.txt
-      echo "Command: pgbench -c $clients -j $threads -T $duration -M prepared -d performance_db -U postgres" | tee -a /tmp/access_method_benchmark_report.txt
+      echo "Command: pgbench -i -s {{ scale }} -d performance_db -U postgres" | tee -a /tmp/access_method_benchmark_report.txt
+      echo "Command: pgbench -c {{ clients }} -j {{ threads }} -T {{ duration }} -M prepared -d performance_db -U postgres" | tee -a /tmp/access_method_benchmark_report.txt
       echo "---------------------------------" | tee -a /tmp/access_method_benchmark_report.txt
       psql -c "DROP DATABASE IF EXISTS performance_db;" -U postgres
       psql -c "CREATE DATABASE performance_db;" -U postgres
       psql -d performance_db -c "ALTER SYSTEM  SET default_table_access_method='heap';"
       psql -d performance_db -c "SELECT pg_reload_conf();"
-      pgbench -i -s $scale -d performance_db -U postgres
-      pgbench -c $clients -j $threads -T $duration -M prepared -d performance_db -U postgres | tee -a /tmp/access_method_benchmark_report.txt
+      pgbench -i -s {{ scale }} -d performance_db -U postgres 2>&1 | tee -a /tmp/access_method_benchmark_report.txt
+      pgbench -c {{ clients }} -j {{ threads }} -T {{ duration }} -M prepared -d performance_db -U postgres 2>&1 | tee -a /tmp/access_method_benchmark_report.txt
       echo "" >> tee -a /tmp/access_method_benchmark_report.txt
       echo "---------------------------------" >> tee -a /tmp/access_method_benchmark_report.txt
       echo "" >> tee -a /tmp/access_method_benchmark_report.txt
@@ -238,10 +238,10 @@
       executable: /bin/bash
       chdir: "/tmp/postgres"
     vars:
-      scale: "{{ lookup('env', 'SCALE') }}"
-      clients: "{{ lookup('env', 'CLIENTS') }}"
-      threads: "{{ lookup('env', 'THREADS') }}"
-      duration: "{{ lookup('env', 'DURATION') }}"
+      scale: "{{ lookup('env', 'pgbench_scale') }}"
+      clients: "{{ lookup('env', 'pgbench_clients') }}"
+      threads: "{{ lookup('env', 'pgbench_threads') }}"
+      duration: "{{ lookup('env', 'pgbench_duration') }}"
     environment:
       PATH: "/opt/pgsql/bin:/opt/pgsql/lib:{{ ansible_env.PATH }}"
       LD_LIBRARY_PATH: "/opt/pgsql/lib"
