--- a/tasks/install_ppg14_tools.yml
+++ b/tasks/install_ppg14_tools.yml
@@ -553,6 +553,29 @@
       enabled: yes
     when: ansible_os_family == "RedHat"
 
+  - name: Install pgvector packages RHEL
+    yum:
+      name: "{{ packages }}"
+      state: latest
+      update_cache: yes
+    vars:
+      packages:
+      - percona-pgvector_14
+      - percona-pgvector_14-debuginfo
+      - percona-pgvector_14-debugsource
+      - percona-pgvector_14-llvmjit
+    when: (ansible_os_family == "RedHat" and pg_version_to_install | string is version('14.15', '>=', strict=True))
+
+  - name: Install pgvector packages Debian
+    apt:
+      name: "{{ packages }}"
+      state: latest
+      update_cache: yes
+    vars:
+      packages:
+      - percona-postgresql-14-pgvector
+    when: (ansible_os_family == "Debian" and pg_version_to_install | string is version('14.15', '>=', strict=True))
+
   - name: Install patroni related packages Debian
     apt:
       name: "{{ packages }}"
