--- a/pdp/performance_tests/molecule/debian-12/molecule.yml
+++ b/pdp/performance_tests/molecule/debian-12/molecule.yml
@@ -8,7 +8,7 @@ platforms:
     region: eu-central-1
     image: ami-0584590e5f0e97daa
     vpc_subnet_id: subnet-085deaca8c1c59a4f
-    instance_type: t2.xlarge
+    instance_type: t2.2xlarge
     ssh_user: admin
     root_device_name: /dev/xvda
     instance_tags:
