--- a/pdp/performance_tests/molecule/ol-8-arm/molecule.yml
+++ b/pdp/performance_tests/molecule/ol-8-arm/molecule.yml
@@ -8,7 +8,7 @@ platforms:
     region: eu-central-1
     image: ami-02d0bbe49c30e7652
     vpc_subnet_id: subnet-085deaca8c1c59a4f
-    instance_type: t4g.xlarge
+    instance_type: t4g.2xlarge
     ssh_user: ec2-user
     root_device_name: /dev/sda1
     instance_tags:
