--- a/pdp/performance_tests/molecule/ubuntu-noble-arm/molecule.yml
+++ b/pdp/performance_tests/molecule/ubuntu-noble-arm/molecule.yml
@@ -8,7 +8,7 @@ platforms:
     region: eu-central-1
     image: ami-008edee5e5698d629
     vpc_subnet_id: subnet-085deaca8c1c59a4f
-    instance_type: t4g.xlarge
+    instance_type: t4g.2xlarge
     ssh_user: ubuntu
     root_device_name: /dev/sda1
     instance_tags:
