--- a/pdp/server_tests/tasks/debian_tasks.yml
+++ b/pdp/server_tests/tasks/debian_tasks.yml
@@ -192,6 +192,46 @@
 
   - debug: var=results.stdout_lines
 
+  - name: Copy pg_config to /usr/bin
+    become: true 
+    command: sudo cp /opt/pgsql/bin/pg_config /usr/bin
+
+  - name: initdb cluster
+    become_user: postgres
+    command: ./initdb -D /opt/pgsql/data
+    args:
+      chdir: /opt/pgsql/bin
+    environment:
+      PATH: "/opt/pgsql/bin:/opt/pgsql/lib:{{ ansible_env.PATH }}"
+      LD_LIBRARY_PATH: "/opt/pgsql/lib"
+    register: results
+
+  - debug: var=results.stdout_lines
+
+  # - name: Add extensions to postgresql.conf for Debian
+  #   lineinfile:
+  #     path: /opt/pgsql/data/postgresql.conf
+  #     line: shared_preload_libraries = 'pg_tde'
+  #   when: with_tde_heap
+
+  # - name: Set default Access Method - heap
+  #   lineinfile:
+  #     path: /opt/pgsql/data/postgresql.conf
+  #     line: default_table_access_method = 'heap'
+  #   when: access_method == 'heap'
+
+  - name: Start Server
+    become_user: postgres
+    command: ./pg_ctl -D /opt/pgsql/data -l /tmp/postgres/logfile start
+    args:
+      chdir: /opt/pgsql/bin
+    environment:
+      PATH: "/opt/pgsql/bin:/opt/pgsql/lib:{{ ansible_env.PATH }}"
+      LD_LIBRARY_PATH: "/opt/pgsql/lib"
+    register: results
+
+  - debug: var=results.stdout_lines
+
   - name: Build pg_tde from sources
     make:
       chdir: "/tmp/postgres/contrib/pg_tde"
@@ -211,37 +251,9 @@
 
   - debug: var=results.stdout_lines
 
-  - name: Copy pg_config to /usr/bin
-    become: true 
-    command: sudo cp /opt/pgsql/bin/pg_config /usr/bin
-
-  - name: initdb cluster
+  - name: Restart Server
     become_user: postgres
-    command: ./initdb -D /opt/pgsql/data
-    args:
-      chdir: /opt/pgsql/bin
-    environment:
-      PATH: "/opt/pgsql/bin:/opt/pgsql/lib:{{ ansible_env.PATH }}"
-      LD_LIBRARY_PATH: "/opt/pgsql/lib"
-    register: results
-
-  - debug: var=results.stdout_lines
-
-  - name: Add extensions to postgresql.conf for Debian
-    lineinfile:
-      path: /opt/pgsql/data/postgresql.conf
-      line: shared_preload_libraries = 'pg_tde'
-    when: with_tde_heap
-
-  # - name: Set default Access Method - heap
-  #   lineinfile:
-  #     path: /opt/pgsql/data/postgresql.conf
-  #     line: default_table_access_method = 'heap'
-  #   when: access_method == 'heap'
-
-  - name: Start Server
-    become_user: postgres
-    command: ./pg_ctl -D /opt/pgsql/data -l /tmp/postgres/logfile start
+    command: ./pg_ctl -D /opt/pgsql/data -l /tmp/postgres/logfile restart
     args:
       chdir: /opt/pgsql/bin
     environment:
@@ -292,6 +304,8 @@
   - name: Run installcheck Server - tde_heap_basic/tde_heap
     ignore_errors: yes
     shell: |
+      psql -d $DB_NAME -c "ALTER SYSTEM SET shared_preload_libraries ='pg_tde';"
+      psql -d $DB_NAME -c "SELECT pg_reload_conf();"
       psql -c "CREATE EXTENSION pg_tde;"
       psql -c "ALTER SYSTEM SET default_table_access_method='{{ method }}';"
       psql -c "SELECT pg_reload_conf();"
@@ -316,6 +330,8 @@
   - name: Run installcheck-world Server - tde_heap_basic/tde_heap
     ignore_errors: yes
     shell: |
+      psql -d $DB_NAME -c "ALTER SYSTEM SET shared_preload_libraries ='pg_tde';"
+      psql -d $DB_NAME -c "SELECT pg_reload_conf();"
       psql -c "CREATE EXTENSION pg_tde;"
       psql -c "ALTER SYSTEM SET default_table_access_method='{{ method }}';"
       psql -c "SELECT pg_reload_conf();"
